--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#projects">github</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -30,9 +30,9 @@
       </section>
 
       <section id="projects">
-        <h2>Projects</h2>
+        <h2>github</h2>
         <a href="//github.com/saarors"
-          >my github
+          >
           <br />
           <img src="img.png" alt="" />
         </a>
@@ -48,3 +48,4 @@
     </main>
   </body>
 </html>
+
